Add read channel posts API endpoint (#1670)
